# BanditFL

./: .gitignore  AGENTS.md  README.md  REFACTORING_GUIDE.md  SUMMARY.md  b_hat.py  bandit_experiment_plan.md  comp_plot.py  fx_cifar10_run.py  fx_mnist_run.py  fx_train_p2p.py  main.py  mnist_run.py  pyproject.toml  readme  run.py  summary.md  train_p2p.py
BanditFL/core/: fx_worker_p2p.py  server.py  worker.py  worker_p2p.py
BanditFL/data/: dataset.py
BanditFL/external_utils/: gossip.py  misc.py
BanditFL/network/: topo.py
BanditFL/robustness/: aggregators.py  attacks.py  byz_worker.py
BanditFL/tools/: cluster.py  jobs.py  misc.py  pytorch.py
BanditFL/utils/: misc.py  study.py
banditdl/: __init__.py  __main__.py
banditdl/cli/: __init__.py  run_cifar.py  run_fx_cifar.py  run_fx_mnist.py  run_mnist.py
banditdl/core/: __init__.py  common.py  sampling.py
banditdl/data/: __init__.py  dataset.py  dataset_utils.py  models.py
banditdl/experiments/: __init__.py  common.py  engine.py  fx_cifar10_run.py  fx_mnist_run.py  fx_train_p2p.py  hydra_run.py  hyperparam_opt.py  mnist_run.py  run.py  simulations.py  sweep.py  train_p2p.py
banditdl/sampling/: __init__.py  (+1 more)
conf/: config.yaml  sweep.yaml
scripts/: plot_results.py  run_cifar.py  run_mnist.py  train_p2p.py
src/: byzWorker.py  byz_attacks.py  dataloaders.py  dataset.py  fx_worker_p2p.py  fxgraph.py  misc.py  models.py  robust_aggregators.py  robust_summations.py  server.py  study.py  topo.py  worker.py  worker_p2p.py
tests/: test_sampling.py
tools/: jobs.py
utils/: misc.py  torch_tools.py
(+74 files in other folders)
